Source/WebDriver/WebDriverService.h
@@ -176,7 +176,7 @@ private:
 
     HTTPServer m_server;
 #if ENABLE(WEBDRIVER_BIDI)
-    WebSocketServer m_bidiServer;
+    Ref<WebSocketServer> m_bidiServer;
     SessionHost::BrowserTerminatedObserver m_browserTerminatedObserver;
 #endif
     RefPtr<Session> m_session;
